# catm-project

./: .gitignore  CLAUDE.md  EXTRACTION_GUIDE.md  README.md  catm.sh  index.html  pyproject.toml  requirements.txt
.agent/workflows/: catm-run.md
.claude/commands/: catm-analyze.md  catm-deps.md  catm-priority.md  catm-run.md  catm-scan.md  catm-test.md
catm/config/: catm_config.yaml
catm/prompts/: analyze-data.md  analyze-logic.md  prioritize.md
catm/scripts/: 01_scan_inventory.py  02_extract_dependencies.py  03_parse_copybook.py  04_generate_diagrams.py  05_analyze_with_claude.py  06_prioritize.py
catm/utils/: __init__.py  claude_client.py  cobol_parser.py  config_validator.py  cross_reference.py  file_utils.py  logger.py  mermaid_builder.py
dashboard/: app.js  index.html  style.css
docs/: 01_PROJECT_OVERVIEW.md  02_ANALYSIS_PIPELINE.md  03_SYSTEM_ARCHITECTURE.md  04_GETTING_STARTED.md  05_OUTPUT_GUIDE.md  06_CONFIG_REFERENCE.md  CUSTOMER_CHECKLIST.md  README.md
manual/: CATM_사용자_메뉴얼.md
output/: CATM_프로젝트_보고서.pptx  dependency-scan.json
output/data-dict/: CPYBFOP.md  CPYBFTM.md  CPYINVMS.md  CPYINVTR.md  CPYLEDGR.md  CPYPACT.md  CPYPPLAN.md  CPYQCHS.md  CPYQCRS.md  CPYRMMS.md  CPYRMRC.md  CPYSMRY.md  CPYTRANS.md
output/diagrams/: README.md  call_graph.md  data_flow.md  erd_copybooks.md  jcl_flow.md
output/docs/: PGM001.md  (+6 more)
tests/: conftest.py  reproduce_parser_issues.py  test_claude_client.py  test_cobol_parser.py  test_config_validator.py  test_cross_reference.py  test_error_handling.py  test_file_utils.py  test_logger.py  test_mermaid_builder.py
(+27 files in other folders)
